Created references in context

--- a/Evernote.Context/Evernote.Context.csproj
+++ b/Evernote.Context/Evernote.Context.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Evernote.Entities\Evernote.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
