fix db context, add migrations

--- a/Evernote.API/appsettings.json
+++ b/Evernote.API/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DataConnection": "default"
+        "DataConnection": "server=(localdb)\\MSSQLLocalDB; database=EvernoteDB; Integrated Security=true"
     }
 }
